links displays each ID but doesn't work when forwarded

--- a/starter-code/views/celebrities/index.hbs
+++ b/starter-code/views/celebrities/index.hbs
@@ -2,8 +2,12 @@
 
 {{#each listOfCelebrities}}
 
-{{> _celebrityPartial}}
+    <div>
+        {{> _celebrityPartial}}
+        <a href="/celebrities/{{this._id}}">See Details</a>
+    </div>
 
+    <hr>
 {{/each}}
 
 <a href="/celebrities">Celebrities</a>
