--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -8,6 +8,7 @@
   <body>
 
 <nav class="navbar navbar-expand-lg navigation center">
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         <a class="nav-link" href="/celebrities">Celebrities<span class="sr-only">(current)</span></a>
   {{!-- <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav center">
