adding a new celeb link is broken

--- a/starter-code/views/celebrities/index.hbs
+++ b/starter-code/views/celebrities/index.hbs
@@ -10,4 +10,5 @@
     <hr>
 {{/each}}
 
-<a href="/celebrities">Celebrities</a>
+<a href="/celebrities">Celebrities</a> <br>
+<a href="/celebrities/new">Add a New Celebrity</a>
