--- a/starter-code/views/partials/_celebrityPartial.hbs
+++ b/starter-code/views/partials/_celebrityPartial.hbs
@@ -1,3 +1,10 @@
 <div>
     <span>{{this.name}}</span>
+    <form action="/celebrities/{{this._id}}/delete" method="post"><button type="submit">Delete</button></form>
 </div> 
+
+{{!-- <div>
+    <h1>Name: {{celebrity.name}}</h1>
+    <p>Occupation: {{celebrity.occupation}}</p>
+    <p>Catch Phrase: {{celebrity.catchPhrase}}</p>
+</div> --}}
