--- a/starter-code/views/celebrities/new.hbs
+++ b/starter-code/views/celebrities/new.hbs
@@ -1,18 +1,15 @@
 <h2>New</h2>
 
-<form action="/celebrities/create" method="POST">
+<form action="/celebrities/create" method="post">
 
-    <lable>Name</lable>
-    <input type="text" name="name">
-    <br>
+    <label for="name-input">Name</label>
+    <input type="text" name="newName" id="name-input">
 
-    <lable>Occupation</lable>
-    <input type="text" name="occupation">
-    <br>
+    <label for="occupation-input">Occupation</label>
+    <input type="text" name="newOccupation" id="occupation-input">
 
-    <lable>Catch Phrase</lable>
-    <input type="text" name="catchPhrase">
-    <br>
+    <label for="plot-input">Catch Phrase</label>
+    <input type="text" name="newCatchPhrase" id="catchPhrase-input">
 
     <button type="submit">Save Celebrity</button>
 
