--- a/starter-code/views/layout.hbs
+++ b/starter-code/views/layout.hbs
@@ -10,6 +10,7 @@
 <nav class="navbar navbar-expand-lg navigation center">
         <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
         <a class="nav-link" href="/celebrities">Celebrities<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/movies">Movies<span class="sr-only">(current)</span></a>
   {{!-- <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav center">
       <li class="nav-item active">
